--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -19,6 +19,11 @@
     font-size: 13px;
     line-height: 150%;
   }
+  &_fz16 {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+  }
   &_fz21 {
     font-weight: 500;
     font-size: 21px;
@@ -28,6 +33,10 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 143%;
+  }
+  &_fz36 {
+    font-size: 36px;
+    line-height: 133%;
   }
   &_fz48 {
     font-weight: 500;
