--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,14 +1,18 @@
 @import "libs/bootstrap-reboot.min";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
-// @import "base/variables";
-// @import "base/mixins";
-
 @import "blocks/titles";
 @import "blocks/btns";
 @import "blocks/label";
 @import "blocks/promo";
 @import "blocks/header";
+@import "blocks/catalog";
+@import "blocks/content";
+@import "blocks/cook";
+@import "blocks/reviews";
+@import "blocks/gallery";
+@import "blocks/footer";
+@import "blocks/policy";
 
 * {
     font-family: "Montserrat", sans-serif;
@@ -19,5 +23,5 @@
   .container {
     max-width: 1180px;
     margin: 0 auto;
-    // border: red 1px solid;
+    position: relative;
   }
