--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,8 +1,7 @@
 .promo {
-  min-height: 100vh;
   padding-top: 37px;
-  padding-bottom: 465px;
-  background: url("../img/bg.jpg") center center/cover no-repeat;
+  padding-bottom: 188px;
+  background: url("../img/bg.jpg") center 0% /100% auto no-repeat;
   &__wrapper {
     margin-top: 188px;
     width: 647px;
@@ -24,6 +23,13 @@
       font-weight: 400;
       font-size: 15px;
       line-height: 160%;
+
+      text-shadow: -0 -1px 1px #000000, 0 -1px 1px #000000, -0 1px 1px #000000,
+        0 1px 1px #000000, -1px -0 1px #000000, 1px -0 1px #000000,
+        -1px 0 1px #000000, 1px 0 1px #000000, -1px -1px 1px #000000,
+        1px -1px 1px #000000, -1px 1px 1px #000000, 1px 1px 1px #000000,
+        -1px -1px 1px #000000, 1px -1px 1px #000000, -1px 1px 1px #000000,
+        1px 1px 1px #000000;
       &:hover {
         color: #fff;
       }
