--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
 @import "libs/bootstrap-reboot.min";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 
 @import "blocks/titles";
 @import "blocks/btns";
@@ -13,15 +13,15 @@
 @import "blocks/gallery";
 @import "blocks/footer";
 @import "blocks/policy";
+@import "blocks/media";
 
 * {
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    max-width: 1180px;
-    margin: 0 auto;
-    position: relative;
-  }
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  // max-width: 1180px;
+  margin: 0 auto;
+}
