--- a/src/sass/blocks/_cook.scss
+++ b/src/sass/blocks/_cook.scss
@@ -2,7 +2,9 @@
   padding: 97px 0 97px 0;
   &__wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 580px);
+    // grid-template-columns: repeat(2, 580px);
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
     justify-content: space-between;
     align-items: center;
   }
@@ -35,7 +37,7 @@
     }
     &-round {
       position: absolute;
-      width: 580px;
+      width: 100%;
       height: 580px;
       bottom: 0;
       z-index: -1;
