--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -276,26 +276,29 @@
     .title {
       font-size: 22px;
       line-height: 30px;
+      margin-top: 50px;
+    }
+    &__subtitle {
+      margin-top: 40px;
     }
     .title_fz24 {
       font-size: 15px;
     }
     &__wrapper {
       width: 100%;
-      margin-top: 40px;
+      margin-top: 80px;
     }
     .header {
       flex-direction: column;
+      align-items: start;
       .title_fz21 {
-        font-size: 21px;
+        font-size: 33px;
         line-height: 143%;
       }
       &__contacts {
-        margin-top: 20px;
-        width: 100%;
-      }
-      &__wrapper {
         margin-top: 40px;
+        width: 100%;
+        justify-content: start;
       }
       &__tel,
       .title_fz13 {
@@ -307,16 +310,21 @@
       }
     }
     &__btns {
-      margin-top: 20px;
+      margin-top: 100px;
+      flex-direction: column;
+      align-items: start;
     }
     .btn {
       padding: 10px;
       width: 220px;
-      height: 77px;
+      height: 48px;
+      font-size: 16px;
     }
     &__link_white {
       font-size: 11px;
       line-height: 150%;
+      margin-top: 20px;
+      padding-left: 32px;
     }
   }
   .content {
